SFUSA/force-app/main/default/objects/PR_Phasing__c/fields/Campaign__c.field-meta.xml
<CustomField>
        <fullName>Campaign__c</fullName>
        <formula>PR_Detail__r.Campaign_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign</label>
        <type>Text</type>
    </CustomField>