SFUSA/force-app/main/default/objects/PR_Phasing__c/fields/Campaign_Spend__c.field-meta.xml
<CustomField>
        <fullName>Campaign_Spend__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Spend</label>
        <referenceTo>Campaign_Spend__c</referenceTo>
        <relationshipLabel>PR Phasings</relationshipLabel>
        <relationshipName>PR_Phasings</relationshipName>
        <type>Lookup</type>
    </CustomField>