SFUSA/force-app/main/default/objects/PR_Phasing__c/fields/Campaign_Spend_Creation_Error__c.field-meta.xml
<CustomField>
        <fullName>Campaign_Spend_Creation_Error__c</fullName>
        <label>Campaign Spend Creation Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>