SFUSA/force-app/main/default/objects/PR_Phasing__c/fields/Delivery_Date__c.field-meta.xml
<CustomField>
        <fullName>Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </CustomField>