SFUSA/force-app/main/default/objects/PR_Phasing__c/fields/IO_Code__c.field-meta.xml
<CustomField>
        <fullName>IO_Code__c</fullName>
        <formula>PR_Detail__r.IOCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IO Code</label>
        <type>Text</type>
    </CustomField>