SFUSA/force-app/main/default/objects/PR_Phasing__c/fields/Month__c.field-meta.xml
<CustomField>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PRMonths</valueSetName>
        </valueSet>
    </CustomField>