SFUSA/force-app/main/default/objects/PR_Phasing__c/fields/Phasing_Amount__c.field-meta.xml
<CustomField>
        <fullName>Phasing_Amount__c</fullName>
        <label>Phasing Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>