SFUSA/force-app/main/default/objects/PR_Phasing__c/fields/PR_Header_ID__c.field-meta.xml
<CustomField>
        <fullName>PR_Header_ID__c</fullName>
        <formula>PR_Detail__r.PR_Header__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PR Header ID</label>
        <type>Text</type>
    </CustomField>