SFUSA/force-app/main/default/objects/PR_Phasing__c/fields/Unique_ID__c.field-meta.xml
<CustomField>
        <fullName>Unique_ID__c</fullName>
        <description>PR Details Number+ Month</description>
        <externalId>true</externalId>
        <inlineHelpText>PR Details Number+ Month</inlineHelpText>
        <label>Unique ID</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </CustomField>